samples/_failures_safe/1761189486_c8ff45_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5f634ef3.c: In function ‘main’:
./samples/SAFE/__tmp_5f634ef3.c:156:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  156 |     uint8_t sample_data
      |     ^~~~~~~
./samples/SAFE/__tmp_5f634ef3.c:156:5: error: expected declaration or statement at end of input
